# nlk-py

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.ja.md  README.md  pyproject.toml
docs/en/: reference.md
docs/ja/: reference.ja.md
src/nlk/: __init__.py  backoff.py  guard.py  jsonfix.py  strip.py  validate.py
tests/: test_backoff.py  test_guard.py  test_jsonfix.py  test_strip.py  test_validate.py
