[project]
name = "nlk"
version = "0.1.0"
description = "Lightweight LLM utility toolkit — guard, jsonfix, strip, backoff, validate. Zero external dependencies."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nlk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
